--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,7 @@
   <body>
     <noscript>You need to enable JavaScript to enter this page.</noscript>
     <div id="root"></div>
+    <script async defer src="https://apis.google.com/js/api.js">
+    </script>
   </body>
 </html>
