start delivery points logic

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <body>
     <noscript>You need to enable JavaScript to enter this page.</noscript>
     <div id="root"></div>
-    <script async defer src="https://apis.google.com/js/api.js">
-    </script>
+    <script async defer src="https://apis.google.com/js/api.js"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCF2hDR3wSyO7XYHaAHHZJmQWvTQTkUrvM&libraries=places"></script>
   </body>
 </html>
